Ensure window resizing doesn't break the menu, and optimize line heights in menus.

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -333,6 +333,7 @@
 
   #site-navigation .menu > li {
     display: inline-block;
+    line-height: 1;
     position: relative;
   }
 
