--- a/css/menus.css
+++ b/css/menus.css
@@ -10,7 +10,6 @@
 }
 
 #site-navigation .menu li {
-  line-height: 1;
   margin: 0;
 }
 
